# ffmpeg-light

./: .gitignore  .travis.yml  CHANGELOG.md  Containerfile-alpine  README.md  Vagrant-README.md  Vagrantfile  cabal.config  default.nix  ffmpeg-light.cabal  ffmpeg-ubuntu-compile.sh  flake.nix  hackagedocs.sh  shell.nix  stack.yaml  vagrant-bootstrap.sh
.github/workflows/: ci.yml
demo/: Audio.hs  AudioExtract.hs  AudioSin.hs  Main.hs  Raster.hs  Transcode.hs  VPlay.hs
src/: hscMacros.h  nameCompat.h
src/Codec/: FFmpeg.hs
src/Codec/FFmpeg/: AudioStream.hs  Buffer.hs  Common.hsc  Decode.hs  Display.hsc  Encode.hs  Encode.hsc  Enums.hsc  Juicy.hs  Probe.hsc  Resampler.hs  Scaler.hs  Types.hsc
src/Codec/FFmpeg/Internal/: Debug.hsc  Linear.hs  V3.hs
